--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,7 @@
         android:textAlignment="center"
         android:layout_marginTop="20dp"
         android:textColor="@color/white"
+        android:hint="value"
         android:layout_below="@id/oprBtn"
         android:textSize="25dp" />
 
