--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,9 +33,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:text="Celcius"
+            android:text="  ℃  "
             android:paddingRight="10dp"
-            android:textSize="18dp"/>
+            android:textSize="25dp"/>
 
         <Switch
             android:id="@+id/switchforC2F"
@@ -49,15 +49,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:text="Forenhite"
+            android:text=" ℉ "
             android:paddingLeft="10dp"
-            android:textSize="18dp"/>
-
+            android:textSize="25dp"/>
 
     </LinearLayout>
-
-
-
 
     <Button
         android:id="@+id/oprBtn"
